--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -1,3 +1,6 @@
+/*background-color: #9ED8D2;
+background-color: #A89467;*/
+
 .backpack {
   margin: 0;
   padding: 0;
@@ -12,13 +15,16 @@
 }
 
 .backpack .press {
-  border-top: 1px solid rgba(128,128,128,0.2);
-  border-right: 1px solid rgba(128,128,128,0.3);
-  border-left: 1px solid rgba(128,128,128,0.3);
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-top: 1px solid rgba(200,200,200,0.3);
+  border-right: 1px solid rgba(200,200,200,0.5);
+  border-left: 1px solid rgba(200,200,200,0.5);
+  border-bottom: 1px solid rgba(200,200,200,0.8);
   background:-webkit-gradient(linear,center top,center bottom,from(#FEFEFE),to(#F0F0F0));
   background:-moz-linear-gradient(top,#FEFEFE,#F0F0F0);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE',endColorstr='#F0F0F0',GradientType=0);
+  -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+     -moz-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
 .backpack-component {
@@ -34,7 +40,7 @@
  */
 .backpack-menu {
   padding: 0;
-  margin: 10px 0;
+  margin: 0;
   display: block;
   overflow: hidden;
   text-align: center;
