--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -7,6 +7,17 @@ background-color: #A89467;*/
   font-family: Helvetica, Arial, sans-serif;
 }
 
+.backpack-component {
+  -webkit-box-sizing: border-box; 
+     -moz-box-sizing: border-box; 
+          box-sizing: border-box;
+}
+
+
+/* --------------------
+ * Backpack Helpers
+ * --------------------
+ */
 .backpack .hide {
   opacity: 0;
   display: none;
@@ -22,15 +33,31 @@ background-color: #A89467;*/
   background:-webkit-gradient(linear,center top,center bottom,from(#FEFEFE),to(#F0F0F0));
   background:-moz-linear-gradient(top,#FEFEFE,#F0F0F0);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE',endColorstr='#F0F0F0',GradientType=0);
-  -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-     -moz-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
+     -moz-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
+          box-shadow: 0 2px 6px rgba(128,128,128,0.2);
 }
 
-.backpack-component {
-  -webkit-box-sizing: border-box; 
-     -moz-box-sizing: border-box; 
-          box-sizing: border-box;
+.backpack .bump-right {
+  float: right;
+}
+
+.backpack .bump-left {
+  float: left;
+}
+
+.backpack .clearfix {
+  zoom: 1;
+}
+
+.backpack .clearfix::after {
+  clear: both;
+  content: ".";
+  display: block;
+  font-size: 0;
+  height: 0;
+  line-height: 0;
+  visibility: hidden;
 }
 
 /* --------------------
@@ -48,10 +75,13 @@ background-color: #A89467;*/
   border: 1px solid #DDD;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
+      -ms-border-radius: 4px;
+       -o-border-radius: 4px;
           border-radius: 4px;
 }
 
-.backpack-menu li, .backpack-menu-item {
+.backpack-menu li, 
+.backpack-menu-item {
   float: left;
   list-style: none;
 }
@@ -71,7 +101,22 @@ background-color: #A89467;*/
   border-top: 1px solid rgba(255,255,255,0.9);
 }
 
+.backpack-menu li:first-child a {
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-topleft: 4px; 
+  -moz-border-radius-bottomleft: 4px; 
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px; 
+}
+
 .backpack-menu li:last-child a {
+  -webkit-border-top-right-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -moz-border-radius-topright: 4px; 
+  -moz-border-radius-bottomright: 4px; 
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px; 
   border-right: none;
 }
 
@@ -87,28 +132,29 @@ background-color: #A89467;*/
  * Backpack.Modal
  * --------------------
  */
-.backpack-dialog, .backpack-modal {
-  z-index: 2;
+.backpack-modal {
   position: relative;
-  padding: 20px;
-  min-width: 50px;
-  max-width: 450px;
-  margin: 15px auto;
+  text-align: left;
+  color: #333;
+  padding: 10px 23px;
+  font-size: 15px;
+  min-width: 400px;
+  max-width: 500px;
   border: 1px solid #DDD;
   background-color: #FFF;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+  -webkit-border-radius: 2px;
+     -moz-border-radius: 2px;
+          border-radius: 2px;
   -webkit-box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
      -moz-box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.backpack-dialog .close, .backpack-modal .close {
+.backpack-modal .close {
   display: block;
   position: absolute;
-  right: 2px;
   top: 0;
+  right: 0;
   padding: 0 6px;
   font-size: 18px;
   font-weight: bold;
@@ -116,7 +162,11 @@ background-color: #A89467;*/
   cursor: pointer;
 }
 
-.backpack-dialog .backpack-dialog-button-container,
+.backpack-modal .content { 
+  clear: both;
+  margin: 0;
+}
+
 .backpack-modal .backpack-dialog-button-container {
   position: absolute;
   bottom: 0;
@@ -126,23 +176,42 @@ background-color: #A89467;*/
   text-align: right;
 }
 
-.backpack-modal {
-  z-index: 3;
-  -webkit-box-shadow: 0 15px 50px rgba(0, 0, 0, .5);
-     -moz-box-shadow: 0 15px 50px rgba(0, 0, 0, .5);
-          box-shadow: 0 15px 50px rgba(0, 0, 0, .5);
-}
-
 
 /* --------------------
  * Backpack.Overlay
  * --------------------
  */
-.backpack-overlay {
-  z-index: 1;
+.backpack .backpack-overlay {
+  overflow-x: auto;
+  overflow-y: scroll;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  bottom: 0;
+  right: 0;
+  z-index: 9;
+}
+
+.backpack .backpack-overlay-outer {
+  display: table;
   height: 100%;
+  table-layout: fixed;
+  width: 100%;
+}
+
+.backpack .backpack-overlay-inner {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  width: 100%;
+}
+
+.backpack .backpack-overlay-container {
+  display: inline-block;
+  outline: none;
+  text-align: left;
+}
+
+.backpack .backpack-overlay-border {
+  margin: 20px 0;
 }
