Fix double scroll bars. Run docco.

--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -221,6 +221,11 @@ background-color: #A89467;*/
  * Backpack.Overlay
  * --------------------
  */
+
+.backpack.overlay {
+  overflow: hidden;
+}
+
 .backpack-overlay {
   overflow-x: auto;
   overflow-y: scroll;
