--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -125,8 +125,8 @@ background-color: #A89467;*/
 
 
 /* --------------------
- * Backpack.Menu
- * Backpack.MenuItem
+ * Backpack.Tabs
+ * Backpack.Tab
  * --------------------
  */
 .backpack-tabs {
@@ -137,6 +137,12 @@ background-color: #A89467;*/
   text-align: center;
   background: #FEFEFE;
   border-bottom: 1px solid #DDD;
+}
+
+.backpack-tabs::before,
+.backpack-tabs::after {
+  display: table;
+  content: "";
 }
 
 .backpack-tabs li,
