--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -133,7 +133,6 @@ background-color: #A89467;*/
   padding: 0;
   margin: 0;
   display: block;
-  overflow: hidden;
   text-align: center;
   background: #FEFEFE;
   border-bottom: 1px solid #DDD;
@@ -165,6 +164,7 @@ background-color: #A89467;*/
 }
 
 .backpack-tab-active a {
+  padding: 16px 25px 15px;
   border: 1px solid #ddd;
   border-bottom: transparent;
   background-color: #fff;
