--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -25,19 +25,6 @@ background-color: #A89467;*/
   filter: alpha(opacity=0);
 }
 
-.backpack .press {
-  border-top: 1px solid rgba(200,200,200,0.3);
-  border-right: 1px solid rgba(200,200,200,0.5);
-  border-left: 1px solid rgba(200,200,200,0.5);
-  border-bottom: 1px solid rgba(200,200,200,0.8);
-  background:-webkit-gradient(linear,center top,center bottom,from(#FEFEFE),to(#F0F0F0));
-  background:-moz-linear-gradient(top,#FEFEFE,#F0F0F0);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE',endColorstr='#F0F0F0',GradientType=0);
-  -webkit-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
-     -moz-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
-          box-shadow: 0 2px 6px rgba(128,128,128,0.2);
-}
-
 .backpack .bump-right {
   float: right;
 }
@@ -58,6 +45,64 @@ background-color: #A89467;*/
   height: 0;
   line-height: 0;
   visibility: hidden;
+}
+
+.backpack .round {
+  -webkit-border-radius: 4px;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+          border-radius: 4px;
+}
+
+.backpack .round-top {
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+     -moz-border-radius-topleft: 4px;
+     -moz-border-radius-topright: 4px;
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+}
+
+.backpack .round-bottom {
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+     -moz-border-radius-bottomleft: 4px;
+     -moz-border-radius-bottomright: 4px;
+          border-bottom-left-radius: 4px;
+          border-bottom-right-radius: 4px;
+}
+
+.backpack .round-left {
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+     -moz-border-radius-topleft: 4px;
+     -moz-border-radius-bottomleft: 4px;
+          border-top-left-radius: 4px;
+          border-bottom-left-radius: 4px;
+}
+
+.backpack .round-right {
+  -webkit-border-top-right-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+     -moz-border-radius-topright: 4px;
+     -moz-border-radius-bottomright: 4px;
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+}
+
+.backpack .press {
+  border-top: 1px solid rgba(200,200,200,0.3);
+  border-right: 1px solid rgba(200,200,200,0.5);
+  border-left: 1px solid rgba(200,200,200,0.5);
+  border-bottom: 1px solid rgba(200,200,200,0.8);
+  background:-webkit-gradient(linear,center top,center bottom,from(#FEFEFE),to(#F0F0F0));
+  background:-moz-linear-gradient(top,#FEFEFE,#F0F0F0);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE',endColorstr='#F0F0F0',GradientType=0);
+  -webkit-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
+     -moz-box-shadow: 0 2px 6px rgba(128,128,128,0.2);
+          box-shadow: 0 2px 6px rgba(128,128,128,0.2);
 }
 
 /* --------------------
@@ -159,6 +204,11 @@ background-color: #A89467;*/
   text-decoration: none;
 }
 
+.backpack-tab > a:hover {
+  text-decoration: none;
+  background-color: #f8f8f8;
+}
+
 .backpack-tab-active {
   margin-bottom: -2px;
 }
@@ -168,6 +218,10 @@ background-color: #A89467;*/
   border-bottom: transparent;
   background-color: #fff;
   padding: 14px 24px 17px;
+}
+
+.backpack-tab-active > a:hover {
+  background-color: #fff;
 }
 
 
