--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -125,22 +125,43 @@ background-color: #A89467;*/
           border-radius: 4px;
 }
 
+.backpack-list {
+  border: none;
+  display: inline;
+  text-align: left;
+}
+
 .backpack-menu > li, 
 .backpack-menu-item {
   float: left;
   list-style: none;
 }
 
+.backpack-list > li, 
+.backpack-list .backpack-menu-item {
+  float: none;
+  border-top: 1px solid rgba(128,128,128,0.1);
+}
+
 .backpack-menu > li > a,
 .backpack-menu-item a {
   color: #999;
-  height: 55px;
-  padding: 0 25px;
+  padding: 20px 25px;
   display: table-cell;
   vertical-align: middle;
   text-decoration: none;
   border-right: 1px solid #EEE;
   border-top: 1px solid rgba(255,255,255,0.9);
+}
+
+.backpack-list > li > a,
+.backpack-list .backpack-menu-item a {
+  color: #999;
+  padding: 15px 10px;
+  display: table-cell;
+  vertical-align: middle;
+  text-decoration: none;
+  border: none;
 }
 
 .backpack-menu > li:first-child > a {
@@ -160,6 +181,10 @@ background-color: #A89467;*/
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px; 
   border-right: none;
+}
+
+.backpack-list > li:first-child {
+  border-top-color: transparent;
 }
 
 .backpack-menu > li > a:hover {
