--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -1,6 +1,3 @@
-/*background-color: #9ED8D2;
-background-color: #A89467;*/
-
 .backpack {
   margin: 0;
   padding: 0;
@@ -31,6 +28,10 @@ background-color: #A89467;*/
 
 .backpack .bump-left {
   float: left;
+}
+
+.backpack .bump-none {
+  float: none;
 }
 
 .backpack .clearfix {
@@ -204,7 +205,6 @@ background-color: #A89467;*/
   margin: 0;
   display: block;
   text-align: center;
-  background: #FEFEFE;
   border-bottom: 1px solid #DDD;
 }
 
@@ -242,6 +242,7 @@ background-color: #A89467;*/
   padding: 0 20px 25px;
   margin: 0 0 50px 1px;
   border: 1px solid #ddd;
+  background-color: #fff;
   border-top-color: transparent;
 }
 
@@ -276,7 +277,6 @@ background-color: #A89467;*/
   padding: 10px 23px;
   font-size: 15px;
   min-width: 400px;
-  max-width: 500px;
   border: 1px solid #DDD;
   background-color: #FFF;
   -webkit-border-radius: 2px;
@@ -360,4 +360,87 @@ background-color: #A89467;*/
 
 .backpack-overlay-border {
   margin: 20px 0;
+}
+
+/* --------------------
+ * Backpack Button
+ * --------------------
+ */
+button,
+a.button {
+  color: #888;
+  font-size: 1.4em;
+  font-weight: bold;
+  padding: 0.5em 0.8em;
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  -webkit-user-select:none;
+     -moz-user-select:none;
+      -ms-user-select:none;
+       -o-user-select:none;
+          user-select:none;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),
+                      inset 0 0 3px rgba(255,255,255,0.8),
+                      inset 0 0 2px 0.5px rgba(0,0,0,0.7),
+                          0 1px 2px 0.5px rgba(0,0,0,0.2);
+     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),
+                      inset 0 0 3px rgba(255,255,255,0.8),
+                      inset 0 0 2px 0.5px rgba(0,0,0,0.7),
+                          0 1px 2px 0.5px rgba(0,0,0,0.2);
+      -ms-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),
+                      inset 0 0 3px rgba(255,255,255,0.8),
+                      inset 0 0 2px 0.5px rgba(0,0,0,0.7),
+                          0 1px 2px 0.5px rgba(0,0,0,0.2);
+       -o-box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),
+                      inset 0 0 3px rgba(255,255,255,0.8),
+                      inset 0 0 2px 0.5px rgba(0,0,0,0.7),
+                          0 1px 2px 0.5px rgba(0,0,0,0.2);
+          box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),
+                      inset 0 0 3px rgba(255,255,255,0.8),
+                      inset 0 0 2px 0.5px rgba(0,0,0,0.7),
+                          0 1px 2px 0.5px rgba(0,0,0,0.2);
+  background: #eeeeee; /* Old browsers */
+  background: -moz-linear-gradient(top, #eeeeee 0%, #cccccc 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #eeeeee 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #eeeeee 0%,#cccccc 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #eeeeee 0%,#cccccc 100%); /* IE10+ */
+  background: linear-gradient(top, #eeeeee 0%,#cccccc 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+  -webkit-transition-duration: 0.2s;
+     -moz-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+
+button:hover,
+button:focus,
+a.button:hover,
+a.button:focus {
+  background: #eeeeee; /* Old browsers */
+  background: -moz-linear-gradient(top, #eeeeee 0%, #d4d4d4 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#d4d4d4)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #eeeeee 0%,#d4d4d4 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #eeeeee 0%,#d4d4d4 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #eeeeee 0%,#d4d4d4 100%); /* IE10+ */
+  background: linear-gradient(top, #eeeeee 0%,#d4d4d4 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#d4d4d4',GradientType=0 ); /* IE6-9 */
+}
+
+button:active,
+a.button:active {
+  background: #eeeeee; /* Old browsers */
+  background: -moz-linear-gradient(top, #cccccc 0%, #eeeeee 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cccccc), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #cccccc 0%,#eeeeee 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #cccccc 0%,#eeeeee 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #cccccc 0%,#eeeeee 100%); /* IE10+ */
+  background: linear-gradient(top, #cccccc 0%,#eeeeee 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+}
 }
