--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -51,6 +51,32 @@ footer p {
   margin: 40px 0 20px 0;
 }
 
+.chrome {
+  background: #ececec; /* Old browsers */
+  background: -moz-linear-gradient(top, #f6f6f6 0%, #ececec 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(100%,#ececec)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #f6f6f6 0%,#ececec 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* IE10+ */
+  background: linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* W3C */
+  -webkit-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 1px 0 0 white, 
+                      inset 0 -1px 1px rgba(0,0,0,0.1);
+     -moz-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 1px 0 0 white, 
+                      inset 0 -1px 1px rgba(0,0,0,0.1);
+      -ms-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 1px 0 0 white, 
+                      inset 0 -1px 1px rgba(0,0,0,0.1);
+       -o-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 1px 0 0 white, 
+                      inset 0 -1px 1px rgba(0,0,0,0.1);
+          box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 1px 0 0 white, 
+                      inset 0 -1px 1px rgba(0,0,0,0.1);
+  text-shadow: 0 1px white;
+}
+
 .download, .fork {
   display: block;
   float: left;
@@ -139,8 +165,18 @@ a.button {
   margin: 0 auto;
 }
 
+.backpack-tabs {
+  border: 1px solid #ddd;
+  padding-top: 7px;
+  padding-left: 7px;
+}
+
 .backpack-tab-content {
   padding: 10px 10px 0;
+}
+
+.tab-code .backpack-tab-content {
+  padding-bottom: 10px;
 }
 
 .backpack-tab-content button {
@@ -190,6 +226,10 @@ a.button {
   right: 68px;
   position: absolute;
   bottom: 18px;
+}
+
+#sidebar .backpack-list > .sidebar-logo a {
+  padding: 0;
 }
 
 #header {
