--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -53,27 +53,27 @@ footer p {
 
 .chrome {
   background: #ececec; /* Old browsers */
-  background: -moz-linear-gradient(top, #f6f6f6 0%, #ececec 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(100%,#ececec)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #f6f6f6 0%,#ececec 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* IE10+ */
-  background: linear-gradient(top, #fcfcfc 0%,#ececec 100%); /* W3C */
-  -webkit-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+  background: -moz-linear-gradient(top, #f6f6f6 0%, #e6e6e6 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(100%,#e6e6e6)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #f6f6f6 0%,#e6e6e6 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #fcfcfc 0%,#e6e6e6 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #fcfcfc 0%,#e6e6e6 100%); /* IE10+ */
+  background: linear-gradient(top, #fcfcfc 0%,#e6e6e6 100%); /* W3C */
+  -webkit-box-shadow: inset 0 0 6px 0 rgba(255,255,255,0.9), 
                       inset 0 1px 0 0 white, 
-                      inset 0 -1px 1px rgba(0,0,0,0.1);
-     -moz-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 -1px 3px rgba(0,0,0,0.1);
+     -moz-box-shadow: inset 0 0 6px 0 rgba(255,255,255,0.9), 
                       inset 0 1px 0 0 white, 
-                      inset 0 -1px 1px rgba(0,0,0,0.1);
-      -ms-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 -1px 3px rgba(0,0,0,0.1);
+      -ms-box-shadow: inset 0 0 6px 0 rgba(255,255,255,0.9), 
                       inset 0 1px 0 0 white, 
-                      inset 0 -1px 1px rgba(0,0,0,0.1);
-       -o-box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 -1px 3px rgba(0,0,0,0.1);
+       -o-box-shadow: inset 0 0 6px 0 rgba(255,255,255,0.9), 
                       inset 0 1px 0 0 white, 
-                      inset 0 -1px 1px rgba(0,0,0,0.1);
-          box-shadow: inset 0 0 4px 1px rgba(255,255,255,0.9), 
+                      inset 0 -1px 3px rgba(0,0,0,0.1);
+          box-shadow: inset 0 0 6px 0 rgba(255,255,255,0.9), 
                       inset 0 1px 0 0 white, 
-                      inset 0 -1px 1px rgba(0,0,0,0.1);
+                      inset 0 -1px 3px rgba(0,0,0,0.1);
   text-shadow: 0 1px white;
 }
 
