Hide class for screen readers/accessibility

--- a/lib/css/Backpack.css
+++ b/lib/css/Backpack.css
@@ -17,9 +17,13 @@
  */
 .backpack .hide {
   opacity: 0;
-  display: none;
   pointer-events: none;
   filter: alpha(opacity=0);
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px; width: 1px;
+  margin: -1px; padding: 0; border: 0;
 }
 
 .backpack .hidden {
